# mjpeg

./: CMakeLists.txt  Main.cpp  README.md  Structures.txt  jcodec.cpp  jcodec.hpp  jpgd.cpp  jpge.cpp  jpge.hpp  mjpegwriter.cpp  mjpegwriter.hpp  stb_image.cpp  tga2jpg.cpp  timer.cpp  timer.hpp
